<resources>
    <string name="app_name">CloseBitcon</string>
    <string name="stringWelcome_text_1">Welcome to the app!</string>
    <string name="stringWelcome_text_2">Please insert your first- and lastname for identification
        purposes:
    </string>
    <string name="stringFirstname">Firstname</string>
    <string name="stringLastname">Lastname</string>
    <string name="send">Send</string>
    <string name="stringNoResult">No valid names were recorded</string>
    <string name="stringWelcomeUser">Successfully saved your name.\nWelcome %1$s!</string>
    <string name="clearName">Clear Name</string>
    <string name="changeName">Change Name</string>
    <string name="startScan">Start Scan</string>
    <string name="stringBackgroundRunning">Activity is running on the background</string>
    <string name="log">Log</string>

</resources>
