<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
android:id="@+id/main_layout"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="se.github.closebitcon.InitFormActivity">

<RelativeLayout
    android:id="@+id/welcomeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/welcome_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringWelcome_text_1"/>
    <TextView
        android:id="@+id/welcome_text_2"
        android:layout_below="@id/welcome_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringWelcome_text_2"/>
</RelativeLayout>

<RelativeLayout
    android:id="@+id/firstnameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/welcomeLayout"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/stringFirstname"
        android:text="@string/stringFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/input_firstname"
        android:layout_below="@id/stringFirstname"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/lastnameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/firstnameLayout"
    android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/stringLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringLastname"/>
    <EditText
        android:id="@+id/input_lastname"
        android:layout_below="@id/stringLastname"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/sendButtonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/lastnameLayout">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/send"
        android:onClick="sendForm"/>
</RelativeLayout>

</RelativeLayout>

