<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.github.closebitcon.MainActivity">
    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linearButtons"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/logTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>
        </ScrollView>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startScan"
            android:onClick="startScan"/>
        <Button
            android:id="@+id/changeNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeName"
            android:onClick="changeName"/>
    </LinearLayout>

</RelativeLayout>